Analizador Lexico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BIN
    COMILLADOBLE
    COMILLASIMPLE
    COMMENT
    NUMEROC

Grammar

Rule 0     S' -> program
Rule 1     program -> programprim
Rule 2     programprim -> classdecl programprim
Rule 3     programprim -> <empty>
Rule 4     classdecl -> CLASS ID A LLAVEIZQ B LLAVEDER
Rule 5     A -> EXTENDS ID
Rule 6     A -> <empty>
Rule 7     B -> fielddecl B
Rule 8     B -> methdecl B
Rule 9     B -> <empty>
Rule 10    fielddecl -> TYPE ID C FINALIZADOR
Rule 11    C -> COMA ID C
Rule 12    C -> <empty>
Rule 13    methdecl -> D ID PARENTIZQ E PARENTDER block
Rule 14    D -> TYPE
Rule 15    D -> VOID
Rule 16    E -> formals
Rule 17    E -> <empty>
Rule 18    formals -> TYPE ID F
Rule 19    F -> COMA TYPE ID F
Rule 20    F -> <empty>
Rule 21    TYPE -> G
Rule 22    G -> INT
Rule 23    G -> BOOLEAN
Rule 24    G -> STRING
Rule 25    G -> ID
Rule 26    G -> TYPE CORCHIZQ CORCHDER
Rule 27    block -> LLAVEIZQ H I LLAVEDER
Rule 28    H -> vardecl H
Rule 29    H -> <empty>
Rule 30    I -> stmt I
Rule 31    I -> <empty>
Rule 32    vardecl -> TYPE ID J L FINALIZADOR
Rule 33    J -> ASIGNAR expr
Rule 34    J -> <empty>
Rule 35    K -> COMA ID J
Rule 36    L -> K L
Rule 37    L -> <empty>
Rule 38    stmt -> M
Rule 39    M -> assign FINALIZADOR
Rule 40    M -> call FINALIZADOR
Rule 41    M -> RETURN N
Rule 42    M -> IF PARENTIZQ expr PARENTDER stmt O
Rule 43    M -> WHILE PARENTIZQ expr PARENTDER stmt
Rule 44    M -> BREAK FINALIZADOR
Rule 45    M -> CONTINUE FINALIZADOR
Rule 46    M -> block
Rule 47    N -> expr
Rule 48    N -> <empty>
Rule 49    O -> ELSE stmt
Rule 50    O -> <empty>
Rule 51    assign -> location ASIGNAR expr
Rule 52    location -> method
Rule 53    location -> Pprima
Rule 54    method -> P
Rule 55    P -> ID
Rule 56    P -> expr ACCESO ID
Rule 57    Pprima -> expr CORCHIZQ expr CORCHDER
Rule 58    call -> method PARENTIZQ Q PARENTDER
Rule 59    Q -> actuals
Rule 60    Q -> <empty>
Rule 61    actuals -> expr S
Rule 62    S -> expr S
Rule 63    S -> <empty>
Rule 64    expr -> T
Rule 65    T -> location
Rule 66    T -> call
Rule 67    T -> THIS
Rule 68    T -> NEW ID PARENTIZQ PARENTDER
Rule 69    T -> NEW TYPE CORCHIZQ expr CORCHDER
Rule 70    T -> expr ACCESO LENGTH
Rule 71    T -> expr binary expr
Rule 72    T -> unary expr
Rule 73    T -> literal
Rule 74    T -> PARENTIZQ expr PARENTDER
Rule 75    binary -> U
Rule 76    U -> MODULO
Rule 77    U -> YAND
Rule 78    U -> OOR
Rule 79    U -> MENORQUE
Rule 80    U -> MENORIGUAL
Rule 81    U -> MAYORQUE
Rule 82    U -> MAYORIGUAL
Rule 83    U -> COMPIGUAL
Rule 84    U -> COMPDIFERENTE
Rule 85    U -> PLUS
Rule 86    U -> MINUS
Rule 87    U -> POR
Rule 88    U -> DIVIDE
Rule 89    unary -> NEGLOGICA
Rule 90    literal -> V
Rule 91    V -> NUMERO
Rule 92    V -> CADENA
Rule 93    V -> TRUE
Rule 94    V -> FALSE
Rule 95    V -> NULL

Terminals, with rules where they appear

ACCESO               : 56 70
ASIGNAR              : 33 51
BIN                  : 
BOOLEAN              : 23
BREAK                : 44
CADENA               : 92
CLASS                : 4
COMA                 : 11 19 35
COMILLADOBLE         : 
COMILLASIMPLE        : 
COMMENT              : 
COMPDIFERENTE        : 84
COMPIGUAL            : 83
CONTINUE             : 45
CORCHDER             : 26 57 69
CORCHIZQ             : 26 57 69
DIVIDE               : 88
ELSE                 : 49
EXTENDS              : 5
FALSE                : 94
FINALIZADOR          : 10 32 39 40 44 45
ID                   : 4 5 10 11 13 18 19 25 32 35 55 56 68
IF                   : 42
INT                  : 22
LENGTH               : 70
LLAVEDER             : 4 27
LLAVEIZQ             : 4 27
MAYORIGUAL           : 82
MAYORQUE             : 81
MENORIGUAL           : 80
MENORQUE             : 79
MINUS                : 86
MODULO               : 76
NEGLOGICA            : 89
NEW                  : 68 69
NULL                 : 95
NUMERO               : 91
NUMEROC              : 
OOR                  : 78
PARENTDER            : 13 42 43 58 68 74
PARENTIZQ            : 13 42 43 58 68 74
PLUS                 : 85
POR                  : 87
RETURN               : 41
STRING               : 24
THIS                 : 67
TRUE                 : 93
VOID                 : 15
WHILE                : 43
YAND                 : 77
error                : 

Nonterminals, with rules where they appear

A                    : 4
B                    : 4 7 8
C                    : 10 11
D                    : 13
E                    : 13
F                    : 18 19
G                    : 21
H                    : 27 28
I                    : 27 30
J                    : 32 35
K                    : 36
L                    : 32 36
M                    : 38
N                    : 41
O                    : 42
P                    : 54
Pprima               : 53
Q                    : 58
S                    : 61 62
T                    : 64
TYPE                 : 10 14 18 19 26 32 69
U                    : 75
V                    : 90
actuals              : 59
assign               : 39
binary               : 71
block                : 13 46
call                 : 40 66
classdecl            : 2
expr                 : 33 42 43 47 51 56 57 57 61 62 69 70 71 71 72 74
fielddecl            : 7
formals              : 16
literal              : 73
location             : 51 65
methdecl             : 8
method               : 52 58
program              : 0
programprim          : 1 2
stmt                 : 30 42 43 49
unary                : 72
vardecl              : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . programprim
    (2) programprim -> . classdecl programprim
    (3) programprim -> .
    (4) classdecl -> . CLASS ID A LLAVEIZQ B LLAVEDER

    $end            reduce using rule 3 (programprim -> .)
    CLASS           shift and go to state 4

    program                        shift and go to state 1
    programprim                    shift and go to state 2
    classdecl                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> programprim .

    $end            reduce using rule 1 (program -> programprim .)


state 3

    (2) programprim -> classdecl . programprim
    (2) programprim -> . classdecl programprim
    (3) programprim -> .
    (4) classdecl -> . CLASS ID A LLAVEIZQ B LLAVEDER

    $end            reduce using rule 3 (programprim -> .)
    CLASS           shift and go to state 4

    classdecl                      shift and go to state 3
    programprim                    shift and go to state 5

state 4

    (4) classdecl -> CLASS . ID A LLAVEIZQ B LLAVEDER

    ID              shift and go to state 6


state 5

    (2) programprim -> classdecl programprim .

    $end            reduce using rule 2 (programprim -> classdecl programprim .)


state 6

    (4) classdecl -> CLASS ID . A LLAVEIZQ B LLAVEDER
    (5) A -> . EXTENDS ID
    (6) A -> .

    EXTENDS         shift and go to state 8
    LLAVEIZQ        reduce using rule 6 (A -> .)

    A                              shift and go to state 7

state 7

    (4) classdecl -> CLASS ID A . LLAVEIZQ B LLAVEDER

    LLAVEIZQ        shift and go to state 9


state 8

    (5) A -> EXTENDS . ID

    ID              shift and go to state 10


state 9

    (4) classdecl -> CLASS ID A LLAVEIZQ . B LLAVEDER
    (7) B -> . fielddecl B
    (8) B -> . methdecl B
    (9) B -> .
    (10) fielddecl -> . TYPE ID C FINALIZADOR
    (13) methdecl -> . D ID PARENTIZQ E PARENTDER block
    (21) TYPE -> . G
    (14) D -> . TYPE
    (15) D -> . VOID
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        reduce using rule 9 (B -> .)
    VOID            shift and go to state 18
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

    B                              shift and go to state 12
    fielddecl                      shift and go to state 13
    methdecl                       shift and go to state 14
    TYPE                           shift and go to state 15
    D                              shift and go to state 16
    G                              shift and go to state 17

state 10

    (5) A -> EXTENDS ID .

    LLAVEIZQ        reduce using rule 5 (A -> EXTENDS ID .)


state 11

    (25) G -> ID .

    ID              reduce using rule 25 (G -> ID .)
    CORCHIZQ        reduce using rule 25 (G -> ID .)


state 12

    (4) classdecl -> CLASS ID A LLAVEIZQ B . LLAVEDER

    LLAVEDER        shift and go to state 22


state 13

    (7) B -> fielddecl . B
    (7) B -> . fielddecl B
    (8) B -> . methdecl B
    (9) B -> .
    (10) fielddecl -> . TYPE ID C FINALIZADOR
    (13) methdecl -> . D ID PARENTIZQ E PARENTDER block
    (21) TYPE -> . G
    (14) D -> . TYPE
    (15) D -> . VOID
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        reduce using rule 9 (B -> .)
    VOID            shift and go to state 18
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

    fielddecl                      shift and go to state 13
    B                              shift and go to state 23
    methdecl                       shift and go to state 14
    TYPE                           shift and go to state 15
    D                              shift and go to state 16
    G                              shift and go to state 17

state 14

    (8) B -> methdecl . B
    (7) B -> . fielddecl B
    (8) B -> . methdecl B
    (9) B -> .
    (10) fielddecl -> . TYPE ID C FINALIZADOR
    (13) methdecl -> . D ID PARENTIZQ E PARENTDER block
    (21) TYPE -> . G
    (14) D -> . TYPE
    (15) D -> . VOID
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

    LLAVEDER        reduce using rule 9 (B -> .)
    VOID            shift and go to state 18
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

    methdecl                       shift and go to state 14
    B                              shift and go to state 24
    fielddecl                      shift and go to state 13
    TYPE                           shift and go to state 15
    D                              shift and go to state 16
    G                              shift and go to state 17

state 15

    (10) fielddecl -> TYPE . ID C FINALIZADOR
    (14) D -> TYPE .
    (26) G -> TYPE . CORCHIZQ CORCHDER

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 25
    CORCHIZQ        shift and go to state 26

  ! ID              [ reduce using rule 14 (D -> TYPE .) ]


state 16

    (13) methdecl -> D . ID PARENTIZQ E PARENTDER block

    ID              shift and go to state 27


state 17

    (21) TYPE -> G .

    ID              reduce using rule 21 (TYPE -> G .)
    CORCHIZQ        reduce using rule 21 (TYPE -> G .)


state 18

    (15) D -> VOID .

    ID              reduce using rule 15 (D -> VOID .)


state 19

    (22) G -> INT .

    ID              reduce using rule 22 (G -> INT .)
    CORCHIZQ        reduce using rule 22 (G -> INT .)


state 20

    (23) G -> BOOLEAN .

    ID              reduce using rule 23 (G -> BOOLEAN .)
    CORCHIZQ        reduce using rule 23 (G -> BOOLEAN .)


state 21

    (24) G -> STRING .

    ID              reduce using rule 24 (G -> STRING .)
    CORCHIZQ        reduce using rule 24 (G -> STRING .)


state 22

    (4) classdecl -> CLASS ID A LLAVEIZQ B LLAVEDER .

    CLASS           reduce using rule 4 (classdecl -> CLASS ID A LLAVEIZQ B LLAVEDER .)
    $end            reduce using rule 4 (classdecl -> CLASS ID A LLAVEIZQ B LLAVEDER .)


state 23

    (7) B -> fielddecl B .

    LLAVEDER        reduce using rule 7 (B -> fielddecl B .)


state 24

    (8) B -> methdecl B .

    LLAVEDER        reduce using rule 8 (B -> methdecl B .)


state 25

    (10) fielddecl -> TYPE ID . C FINALIZADOR
    (11) C -> . COMA ID C
    (12) C -> .

    COMA            shift and go to state 29
    FINALIZADOR     reduce using rule 12 (C -> .)

    C                              shift and go to state 28

state 26

    (26) G -> TYPE CORCHIZQ . CORCHDER

    CORCHDER        shift and go to state 30


state 27

    (13) methdecl -> D ID . PARENTIZQ E PARENTDER block

    PARENTIZQ       shift and go to state 31


state 28

    (10) fielddecl -> TYPE ID C . FINALIZADOR

    FINALIZADOR     shift and go to state 32


state 29

    (11) C -> COMA . ID C

    ID              shift and go to state 33


state 30

    (26) G -> TYPE CORCHIZQ CORCHDER .

    ID              reduce using rule 26 (G -> TYPE CORCHIZQ CORCHDER .)
    CORCHIZQ        reduce using rule 26 (G -> TYPE CORCHIZQ CORCHDER .)


state 31

    (13) methdecl -> D ID PARENTIZQ . E PARENTDER block
    (16) E -> . formals
    (17) E -> .
    (18) formals -> . TYPE ID F
    (21) TYPE -> . G
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

    PARENTDER       reduce using rule 17 (E -> .)
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

    E                              shift and go to state 34
    formals                        shift and go to state 35
    TYPE                           shift and go to state 36
    G                              shift and go to state 17

state 32

    (10) fielddecl -> TYPE ID C FINALIZADOR .

    VOID            reduce using rule 10 (fielddecl -> TYPE ID C FINALIZADOR .)
    INT             reduce using rule 10 (fielddecl -> TYPE ID C FINALIZADOR .)
    BOOLEAN         reduce using rule 10 (fielddecl -> TYPE ID C FINALIZADOR .)
    STRING          reduce using rule 10 (fielddecl -> TYPE ID C FINALIZADOR .)
    ID              reduce using rule 10 (fielddecl -> TYPE ID C FINALIZADOR .)
    LLAVEDER        reduce using rule 10 (fielddecl -> TYPE ID C FINALIZADOR .)


state 33

    (11) C -> COMA ID . C
    (11) C -> . COMA ID C
    (12) C -> .

    COMA            shift and go to state 29
    FINALIZADOR     reduce using rule 12 (C -> .)

    C                              shift and go to state 37

state 34

    (13) methdecl -> D ID PARENTIZQ E . PARENTDER block

    PARENTDER       shift and go to state 38


state 35

    (16) E -> formals .

    PARENTDER       reduce using rule 16 (E -> formals .)


state 36

    (18) formals -> TYPE . ID F
    (26) G -> TYPE . CORCHIZQ CORCHDER

    ID              shift and go to state 39
    CORCHIZQ        shift and go to state 26


state 37

    (11) C -> COMA ID C .

    FINALIZADOR     reduce using rule 11 (C -> COMA ID C .)


state 38

    (13) methdecl -> D ID PARENTIZQ E PARENTDER . block
    (27) block -> . LLAVEIZQ H I LLAVEDER

    LLAVEIZQ        shift and go to state 41

    block                          shift and go to state 40

state 39

    (18) formals -> TYPE ID . F
    (19) F -> . COMA TYPE ID F
    (20) F -> .

    COMA            shift and go to state 43
    PARENTDER       reduce using rule 20 (F -> .)

    F                              shift and go to state 42

state 40

    (13) methdecl -> D ID PARENTIZQ E PARENTDER block .

    VOID            reduce using rule 13 (methdecl -> D ID PARENTIZQ E PARENTDER block .)
    INT             reduce using rule 13 (methdecl -> D ID PARENTIZQ E PARENTDER block .)
    BOOLEAN         reduce using rule 13 (methdecl -> D ID PARENTIZQ E PARENTDER block .)
    STRING          reduce using rule 13 (methdecl -> D ID PARENTIZQ E PARENTDER block .)
    ID              reduce using rule 13 (methdecl -> D ID PARENTIZQ E PARENTDER block .)
    LLAVEDER        reduce using rule 13 (methdecl -> D ID PARENTIZQ E PARENTDER block .)


state 41

    (27) block -> LLAVEIZQ . H I LLAVEDER
    (28) H -> . vardecl H
    (29) H -> .
    (32) vardecl -> . TYPE ID J L FINALIZADOR
    (21) TYPE -> . G
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

  ! shift/reduce conflict for ID resolved as shift
    RETURN          reduce using rule 29 (H -> .)
    IF              reduce using rule 29 (H -> .)
    WHILE           reduce using rule 29 (H -> .)
    BREAK           reduce using rule 29 (H -> .)
    CONTINUE        reduce using rule 29 (H -> .)
    LLAVEIZQ        reduce using rule 29 (H -> .)
    THIS            reduce using rule 29 (H -> .)
    NEW             reduce using rule 29 (H -> .)
    PARENTIZQ       reduce using rule 29 (H -> .)
    NEGLOGICA       reduce using rule 29 (H -> .)
    NUMERO          reduce using rule 29 (H -> .)
    CADENA          reduce using rule 29 (H -> .)
    TRUE            reduce using rule 29 (H -> .)
    FALSE           reduce using rule 29 (H -> .)
    NULL            reduce using rule 29 (H -> .)
    LLAVEDER        reduce using rule 29 (H -> .)
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

  ! ID              [ reduce using rule 29 (H -> .) ]

    H                              shift and go to state 44
    vardecl                        shift and go to state 45
    TYPE                           shift and go to state 46
    G                              shift and go to state 17

state 42

    (18) formals -> TYPE ID F .

    PARENTDER       reduce using rule 18 (formals -> TYPE ID F .)


state 43

    (19) F -> COMA . TYPE ID F
    (21) TYPE -> . G
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

    TYPE                           shift and go to state 47
    G                              shift and go to state 17

state 44

    (27) block -> LLAVEIZQ H . I LLAVEDER
    (30) I -> . stmt I
    (31) I -> .
    (38) stmt -> . M
    (39) M -> . assign FINALIZADOR
    (40) M -> . call FINALIZADOR
    (41) M -> . RETURN N
    (42) M -> . IF PARENTIZQ expr PARENTDER stmt O
    (43) M -> . WHILE PARENTIZQ expr PARENTDER stmt
    (44) M -> . BREAK FINALIZADOR
    (45) M -> . CONTINUE FINALIZADOR
    (46) M -> . block
    (51) assign -> . location ASIGNAR expr
    (58) call -> . method PARENTIZQ Q PARENTDER
    (27) block -> . LLAVEIZQ H I LLAVEDER
    (52) location -> . method
    (53) location -> . Pprima
    (54) method -> . P
    (57) Pprima -> . expr CORCHIZQ expr CORCHDER
    (55) P -> . ID
    (56) P -> . expr ACCESO ID
    (64) expr -> . T
    (65) T -> . location
    (66) T -> . call
    (67) T -> . THIS
    (68) T -> . NEW ID PARENTIZQ PARENTDER
    (69) T -> . NEW TYPE CORCHIZQ expr CORCHDER
    (70) T -> . expr ACCESO LENGTH
    (71) T -> . expr binary expr
    (72) T -> . unary expr
    (73) T -> . literal
    (74) T -> . PARENTIZQ expr PARENTDER
    (89) unary -> . NEGLOGICA
    (90) literal -> . V
    (91) V -> . NUMERO
    (92) V -> . CADENA
    (93) V -> . TRUE
    (94) V -> . FALSE
    (95) V -> . NULL

    LLAVEDER        reduce using rule 31 (I -> .)
    RETURN          shift and go to state 53
    IF              shift and go to state 54
    WHILE           shift and go to state 57
    BREAK           shift and go to state 58
    CONTINUE        shift and go to state 59
    LLAVEIZQ        shift and go to state 41
    ID              shift and go to state 65
    THIS            shift and go to state 67
    NEW             shift and go to state 68
    PARENTIZQ       shift and go to state 55
    NEGLOGICA       shift and go to state 71
    NUMERO          shift and go to state 73
    CADENA          shift and go to state 74
    TRUE            shift and go to state 75
    FALSE           shift and go to state 76
    NULL            shift and go to state 77

    I                              shift and go to state 48
    stmt                           shift and go to state 49
    M                              shift and go to state 50
    assign                         shift and go to state 51
    call                           shift and go to state 52
    expr                           shift and go to state 56
    block                          shift and go to state 60
    location                       shift and go to state 61
    method                         shift and go to state 62
    Pprima                         shift and go to state 63
    P                              shift and go to state 64
    T                              shift and go to state 66
    unary                          shift and go to state 69
    literal                        shift and go to state 70
    V                              shift and go to state 72

state 45

    (28) H -> vardecl . H
    (28) H -> . vardecl H
    (29) H -> .
    (32) vardecl -> . TYPE ID J L FINALIZADOR
    (21) TYPE -> . G
    (22) G -> . INT
    (23) G -> . BOOLEAN
    (24) G -> . STRING
    (25) G -> . ID
    (26) G -> . TYPE CORCHIZQ CORCHDER

  ! shift/reduce conflict for ID resolved as shift
    RETURN          reduce using rule 29 (H -> .)
    IF              reduce using rule 29 (H -> .)
    WHILE           reduce using rule 29 (H -> .)
    BREAK           reduce using rule 29 (H -> .)
    CONTINUE        reduce using rule 29 (H -> .)
    LLAVEIZQ        reduce using rule 29 (H -> .)
    THIS            reduce using rule 29 (H -> .)
    NEW             reduce using rule 29 (H -> .)
    PARENTIZQ       reduce using rule 29 (H -> .)
    NEGLOGICA       reduce using rule 29 (H -> .)
    NUMERO          reduce using rule 29 (H -> .)
    CADENA          reduce using rule 29 (H -> .)
    TRUE            reduce using rule 29 (H -> .)
    FALSE           reduce using rule 29 (H -> .)
    NULL            reduce using rule 29 (H -> .)
    LLAVEDER        reduce using rule 29 (H -> .)
    INT             shift and go to state 19
    BOOLEAN         shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 11

  ! ID              [ reduce using rule 29 (H -> .) ]

    vardecl                        shift and go to state 45
    H                              shift and go to state 78
    TYPE                           shift and go to state 46
    G                              shift and go to state 17

state 46

    (32) vardecl -> TYPE . ID J L FINALIZADOR
    (26) G -> TYPE . CORCHIZQ CORCHDER

    ID              shift and go to state 79
    CORCHIZQ        shift and go to state 26


state 47

    (19) F -> COMA TYPE . ID F
    (26) G -> TYPE . CORCHIZQ CORCHDER

    ID              shift and go to state 80
    CORCHIZQ        shift and go to state 26


state 48

    (27) block -> LLAVEIZQ H I . LLAVEDER

    LLAVEDER        shift and go to state 81


state 49

    (30) I -> stmt . I
    (30) I -> . stmt I
    (31) I -> .
    (38) stmt -> . M
    (39) M -> . assign FINALIZADOR
    (40) M -> . call FINALIZADOR
    (41) M -> . RETURN N
    (42) M -> . IF PARENTIZQ expr PARENTDER stmt O
    (43) M -> . WHILE PARENTIZQ expr PARENTDER stmt
    (44) M -> . BREAK FINALIZADOR
    (45) M -> . CONTINUE FINALIZADOR
    (46) M -> . block
    (51) assign -> . location ASIGNAR expr
    (58) call -> . method PARENTIZQ Q PARENTDER
    (27) block -> . LLAVEIZQ H I LLAVEDER
    (52) location -> . method
    (53) location -> . Pprima
    (54) method -> . P
    (57) Pprima -> . expr CORCHIZQ expr CORCHDER
    (55) P -> . ID
    (56) P -> . expr ACCESO ID
    (64) expr -> . T
    (65) T -> . location
    (66) T -> . call
    (67) T -> . THIS
    (68) T -> . NEW ID PARENTIZQ PARENTDER
    (69) T -> . NEW TYPE CORCHIZQ expr CORCHDER
    (70) T -> . expr ACCESO LENGTH
    (71) T -> . expr binary expr
    (72) T -> . unary expr
    (73) T -> . literal
    (74) T -> . PARENTIZQ expr PARENTDER
    (89) unary -> . NEGLOGICA
    (90) literal -> . V
    (91) V -> . NUMERO
    (92) V -> . CADENA
    (93) V -> . TRUE
    (94) V -> . FALSE
    (95) V -> . NULL

    LLAVEDER        reduce using rule 31 (I -> .)
    RETURN          shift and go to state 53
    IF              shift and go to state 54
    WHILE           shift and go to state 57
    BREAK           shift and go to state 58
    CONTINUE        shift and go to state 59
    LLAVEIZQ        shift and go to state 41
    ID              shift and go to state 65
    THIS            shift and go to state 67
    NEW             shift and go to state 68
    PARENTIZQ       shift and go to state 55
    NEGLOGICA       shift and go to state 71
    NUMERO          shift and go to state 73
    CADENA          shift and go to state 74
    TRUE            shift and go to state 75
    FALSE           shift and go to state 76
    NULL            shift and go to state 77

    stmt                           shift and go to state 49
    I                              shift and go to state 82
    M                              shift and go to state 50
    assign                         shift and go to state 51
    call                           shift and go to state 52
    expr                           shift and go to state 56
    block                          shift and go to state 60
    location                       shift and go to state 61
    method                         shift and go to state 62
    Pprima                         shift and go to state 63
    P                              shift and go to state 64
    T                              shift and go to state 66
    unary                          shift and go to state 69
    literal                        shift and go to state 70
    V                              shift and go to state 72

state 50

    (38) stmt -> M .

    RETURN          reduce using rule 38 (stmt -> M .)
    IF              reduce using rule 38 (stmt -> M .)
    WHILE           reduce using rule 38 (stmt -> M .)
    BREAK           reduce using rule 38 (stmt -> M .)
    CONTINUE        reduce using rule 38 (stmt -> M .)
    LLAVEIZQ        reduce using rule 38 (stmt -> M .)
    ID              reduce using rule 38 (stmt -> M .)
    THIS            reduce using rule 38 (stmt -> M .)
    NEW             reduce using rule 38 (stmt -> M .)
    PARENTIZQ       reduce using rule 38 (stmt -> M .)
    NEGLOGICA       reduce using rule 38 (stmt -> M .)
    NUMERO          reduce using rule 38 (stmt -> M .)
    CADENA          reduce using rule 38 (stmt -> M .)
    TRUE            reduce using rule 38 (stmt -> M .)
    FALSE           reduce using rule 38 (stmt -> M .)
    NULL            reduce using rule 38 (stmt -> M .)
    LLAVEDER        reduce using rule 38 (stmt -> M .)
    ELSE            reduce using rule 38 (stmt -> M .)


state 51

    (39) M -> assign . FINALIZADOR

    FINALIZADOR     shift and go to state 83


state 52

    (40) M -> call . FINALIZADOR
    (66) T -> call .

    FINALIZADOR     shift and go to state 84
    CORCHIZQ        reduce using rule 66 (T -> call .)
    ACCESO          reduce using rule 66 (T -> call .)
    MODULO          reduce using rule 66 (T -> call .)
    YAND            reduce using rule 66 (T -> call .)
    OOR             reduce using rule 66 (T -> call .)
    MENORQUE        reduce using rule 66 (T -> call .)
    MENORIGUAL      reduce using rule 66 (T -> call .)
    MAYORQUE        reduce using rule 66 (T -> call .)
    MAYORIGUAL      reduce using rule 66 (T -> call .)
    COMPIGUAL       reduce using rule 66 (T -> call .)
    COMPDIFERENTE   reduce using rule 66 (T -> call .)
    PLUS            reduce using rule 66 (T -> call .)
    MINUS           reduce using rule 66 (T -> call .)
    POR             reduce using rule 66 (T -> call .)
    DIVIDE          reduce using rule 66 (T -> call .)


state 53
